test: cover every line and branch of games (#24)
Brings JaCoCo line and branch coverage to 100% (8,737 lines, 4,890
branches) with no exclusions. The suite has 1,053 behaviour tests that
pass in random class and method order.

Branches no real caller can reach were removed. Each removal's reason
is recorded in the commit messages of the cov/* working branches.

Bugs fixed, each with a regression test that failed first:
- blackjack: dealing from an empty shoe overflowed the stack (table,
  player and dealer draws); a round stalled when a box left while its
  card was in the air; a linger countdown outlived a session stop and
  ended the next round; a table could not be picked up after a box
  owner quit mid-round; a quick second hit during the result delay
  could bust a hand already on twenty-one
- poker/draw: fold wins were paid twice; the turn went to the wrong seat
  after the current player left; a player who had left could still act,
  including a departed Poker actor chatting before their refund landed;
  pairs, trips and five of a kind were misranked for some rank-values;
  a showdown with an offline seat still in the hand threw
- tables: deals were lost or skipped around a shuffle; a logout left
  stakes stranded at a second table; a reload mid-hide blocked the player
  at every other table; vote outcomes missed unseated players; hidden-
  chip payouts never told the winner
- display: reconnecting viewers stayed blind after a ProtocolLib outage

Also adds JaCoCo reports and uploads them from CI, failing the build if
the report is missing, and adds MockBukkit, Mockito and the plugin APIs
the tests need.

Co-authored-by: Claude Opus 5.5 (1M context) <noreply@anthropic.com>